# cpp-vscode

./: CMakeLists.txt  Erste Scrhitte.pptx  README.md  code.cmake  myapp
include/: func.h
src/: main.cpp
zusammenfassungen/md/: Git-GitLab-und-GitHub.md
